--- a/bower.json
+++ b/bower.json
@@ -27,10 +27,11 @@
     "t-button": "atomelements/t-button#master",
     "t-password-input": "atomelements/t-password-input#master",
     "t-input": "atomelements/t-input#master",
-    "neon-animation": "PolymerElements/neon-animation#^1.1.0"
+    "neon-animation": "PolymerElements/neon-animation#^1.1.0",
+    "paper-toast": "PolymerElements/paper-toast#^1.1.3"
   },
-  "resolutions":{
-    "paper-styles":"~1.1.3"
+  "resolutions": {
+    "paper-styles": "~1.1.3"
   },
   "devDependencies": {
     "web-component-tester": "*",
