--- a/bower.json
+++ b/bower.json
@@ -28,7 +28,10 @@
     "t-password-input": "atomelements/t-password-input#master",
     "t-input": "atomelements/t-input#master",
     "neon-animation": "PolymerElements/neon-animation#^1.1.0",
-    "paper-toast": "PolymerElements/paper-toast#^1.1.3"
+    "paper-toast": "polymerelements/paper-toast#^1.1.3",
+    "t-loader": "atomelements/t-loader#^1.0.0",
+    "t-shared-lib": "travelnxtelements/t-shared-lib",
+    "t-mystique-auth": "travelnxtelements/t-mystique-auth#^0.0.0"
   },
   "resolutions": {
     "paper-styles": "~1.1.3"
