--- a/bower.json
+++ b/bower.json
@@ -23,15 +23,15 @@
   ],
   "dependencies": {
     "polymer": "Polymer/polymer#^1.0.0",
-    "t-text-container": "travelnxtElements/t-text-container#master",
-    "t-button": "atomelements/t-button#master",
-    "t-password-input": "atomelements/t-password-input#master",
-    "t-input": "atomelements/t-input#master",
+    "t-text-container": "travelnxtElements/t-text-container#^1.0.0",
+    "t-button": "atomelements/t-button#^1.0.0",
+    "t-password-input": "atomelements/t-password-input#^1.0.0",
+    "t-input": "atomelements/t-input#^1.0.0",
     "neon-animation": "PolymerElements/neon-animation#^1.1.0",
-    "t-loader": "atomelements/t-loader#master",
-    "t-shared-lib": "travelnxtelements/t-shared-lib",
-    "t-mystique-auth": "travelnxtelements/t-mystique-auth#master",
-    "t-notify": "atomelements/t-notify#master"
+    "t-loader": "atomelements/t-loader#^1.0.0",
+    "t-shared-lib": "travelnxtelements/t-shared-lib#^1.0.0",
+    "t-mystique-auth": "travelnxtelements/t-mystique-auth#^1.0.0",
+    "t-notify": "atomelements/t-notify#^1.0.0"
   },
   "resolutions": {
     "paper-styles": "~1.1.3"
